Fixed upgrade messages, webkit backface visibility bug and cleaned up upgrade function.
git-svn-id: https://plugins.svn.wordpress.org/easing-slider/trunk@689356 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -98,6 +98,11 @@
     transition: none;
 }
 
+.easingsliderlite.use-css3 .easingsliderlite-slide {
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
+}
+
 .easingsliderlite.use-slide .easingsliderlite-slide {
     float: left !important;
     position: relative !important;
